--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
-    "moduleResolution": "es6",
+    "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es5",
@@ -14,9 +14,6 @@
     "lib": [
       "es2016",
       "dom"
-    ],
-    "exclude": [
-      "node_modules"
     ]
   }
 }
